<resources>
    <string name="app_name">ShopCartAdminApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_category">Add Category</string>
    <string name="add_product">Add Product</string>
    <string name="all_product_detail">All Product Detail</string>
    <string name="add_slider">Add Slider</string>
    <string name="upload_slider">Upload Slider</string>
    <string name="loading">Loading...</string>
    <string name="please_select_image">Please Select Image</string>
    <string name="slider_image_upload_success">Slider Image Uploaded Successfully</string>
    <string name="category_image_upload_success">Category Image Uploaded Successfully</string>
    <string name="upload_category">Upload Category</string>
    <string name="category">Category</string>
    <string name="category_name_cannot_be_empty">Category name cannot be empty </string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_mrp">Product MRP</string>
    <string name="product_sp">Product SP</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="select_product_image">Select Product Images</string>
    <string name="submit">Submit</string>
    <string name="product_name_empty">Product Name cannot be Empty</string>
    <string name="product_description_empty">Product Description cannot be Empty</string>
    <string name="product_mrp_empty">Product MRP cannot be Empty</string>
    <string name="product_sp_empty">Product SP cannot be Empty</string>
    <string name="please_select_cover_image">Please Select Cover Image </string>
    <string name="please_select_product_image">Please Select Product Image </string>
    <string name="please_select_category">Please Select Category</string>
    <string name="product_added_successfully">Products Added Successfully</string>
    <string name="something_went_wrong">Something went wrong.. </string>
    <string name="please_fill_required_details">Please fill required details</string>
    <string name="select_category">Select Category</string>
    <string name="mrp">MRP:</string>
    <string name="sp">SP:</string>

</resources>