<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddProductFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtILName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/product_name"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEdtProductName"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtILDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/product_description"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtILName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEdtProductDescription"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtILMRP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/product_mrp"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtILDescription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEdtProductMRP"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtILSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/product_sp"
                android:paddingBottom="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtILMRP">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEdtProductSP"
                    android:inputType="number"
                    android:digits="0123456789"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <Spinner
                android:id="@+id/product_category_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/dropdown_add_product_layout"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/txtILSP" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_select_cover_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/select_cover_image"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/product_category_dropdown" />


            <ImageView
                android:id="@+id/ivProductCoverImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_select_cover_img"
                tools:background="@color/grey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_product_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/select_product_image"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/ivProductCoverImage" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAddProductFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_product_image"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_product_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/add_product"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/rvAddProductFragment"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>